# FaceEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.py  example_detector.py  example_extractor_matcher.py  for_version_detecor  setup.py  setup.py.in  test.py  version.py
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-test/pybind11/: Makefile  cmake_install.cmake
cmake/: FindFaceEngineSDK.cmake  FindFreeImage.cmake  FindLivenessEngineSDK.cmake  FindTrackEngineSDK.cmake  GetGitRevisionDescription.cmake  IosOptions.cmake  Version.cmake
docs/: FaceEngine.rst  Makefile  conf.py  index.rst  make.bat
examples/: example.py  example_credibility_check.py  example_depth.py  example_detector.py  example_detector_warper.py  example_doc.py  example_estimators.py  example_extractor_matcher.py  example_gaze_cv.py  example_human_detector.py  example_human_extractor.py  example_index.py  example_license.py  example_liveness.py  example_liveness_one_shot.py  example_trackengine.py  example_trackengine_opencv.py  fsdk_utils.py  memory_test.py
examples/images/: 1big.ppm  4big.ppm  6big.ppm  7big.ppm  8big.ppm  9big.ppm  emotions1.ppm  irWarp.ppm  mouth.ppm  small.ppm
examples/images/eyes/: image_069_0_eyelid.pts  image_069_1_iris.pts  image_069_wlm.txt
images/: 00205_9501_p.ppm  0big.ppm  2big.ppm  3big.ppm  5big.ppm  emotions2.ppm  image1.ppm  image2.ppm  overlap.ppm  photo_2017-03-30_14-47-43_p.ppm  smile.ppm  this_is_a_new_test_image.tiff  warp.depth  warp1.ppm  warp2.ppm
images/eyes/: image_069.txt  image_069_0_iris.pts  image_069_1_eyelid.pts
include/: ErrorsAdapter.hpp  FaceEngineAdapter.hpp
src/: ErrorsAdapter.hpp  FaceEngine.cpp  FaceEngineAdapter.cpp  FaceEngineAdapter.hpp  LivenessEngineAdapter.cpp  LivenessEngineAdapter.hpp  SettingsProviderAdapter.cpp  SettingsProviderAdapter.hpp  helpers.cpp  helpers.hpp  main.cpp  py_descriptor.cpp  py_detector.cpp  py_estimators.cpp  py_faceengine.cpp  py_image_rect.cpp  py_index.cpp  py_liveness.cpp  py_settingsprovider.cpp  py_warper.cpp
src/LivenessEngine/: LivenessEngineAdapter.cpp  LivenessEngineAdapter.hpp  py_liveness.cpp
src/TrackEngine/: CallbackObserver.cpp  CallbackObserver.hpp  TrackEngineAdapter.cpp  TrackEngineAdapter.hpp  TrackEngineCallback.hpp  py_trackengine.cpp
tests/: image.py  license_helper.py  test_config.py  test_descriptor.py  test_detector.py  test_estimators.py  test_image.py  test_index.py  test_liveness.py  test_rect.py  test_trackengine.py
tests/trackengine_tests/: license_helper.py  test_detector_scaling.py  test_minimal_track_length.py  test_skip_frames.py  test_trackengine.py  test_tracker_type.py  trackengine_base_class.py
